Fixed centering for svgs with text behind them

--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@ h3 {
     border-radius: 10px;
     padding: 0.5rem 0.7rem;
     min-width: max-content;
+    display: flex;
 }
 
 svg {
